Fixed thumbnails on mobile

--- a/craft/templates/elements/components/posts/_posts-excerpts.scss
+++ b/craft/templates/elements/components/posts/_posts-excerpts.scss
@@ -109,7 +109,11 @@
 }
 
 .c-post-lead--thumbs {
-  margin: 0 0 -20px;
+  margin: 0 0 #{$grid-gutter / 3};
+
+  @include medium {
+    margin: 0 0 -#{$grid-gutter / 3};
+  }
 
   .c-post-lead_title {
     margin-top: .25em;
